# mmpilot

./: .gitignore  CMakeLists.txt  README.md  make_debug.sh  make_devel.sh
include/libcamera/: control_ids.h  property_ids.h  version.h
include/libcamera/ipa/: raspberrypi_ipa_interface.h  vimc_ipa_interface.h
include/mmpilot/: affine.h  affine_stage.h  agl_stage.h  bayer.h  beta_msp.h  binary.h  blend.h  calib.h  camera.h  camera_frame.h  control.h  control_stage.h  display.h  egl.h  egl_thread.h  flip.h  flow.h  gps.h  gpx.h  gradient.h  gyro.h  helpers.h  homography.h  image.h  jpeg.h  json.h  localization.h  map.h  mapping.h  math.h  merge.h  model.h  model_stage.h  multi_affine.h  multi_flow.h  nav_point.h  nav_track.h  navigation.h  opengl.h  pipeline.h  (+25 more)
shader/affine/: gradient.glsl  jacobian.glsl
shader/bayer/: BGGR16_luma.glsl  BGGR16_rgba.glsl
shader/calib/: camera_pose.glsl
shader/color/: blend.glsl  display.glsl  downscale_rgba16f.glsl  flip_xy.glsl  luma.glsl  luma_rgba.glsl  points.glsl
shader/debug/: delta_mono.glsl  flow_overlay.glsl  residual_overlay.glsl
shader/gradient/: G55.glsl  G77.glsl  H55.glsl  H77.glsl
shader/homographic/: gradient.glsl  hessian.glsl  hessian_16.glsl  jacobian.glsl  jacobian33.glsl  residual.glsl  weight.glsl
shader/mapping/: blend_mono.glsl  compress.glsl  error_mono.glsl  flow_init.glsl  flow_mono.glsl  flow_warp.glsl  global_warp.glsl  image_search.glsl  render_mono.glsl  render_rgba.glsl  stitch_mono.glsl  vertex.glsl
shader/rectify/: fisheye.glsl  gradient.glsl  jacobian.glsl  rectify_rgba.glsl  virtual_cam.glsl
shader/reduction/: sumy_r.glsl  sumy_rg.glsl  sumy_rg8.glsl  sumy_rgba.glsl
shader/scale/: downscale.glsl  downscale_r.glsl  downscale_r16f.glsl  downscale_rg.glsl  downscale_rg16f.glsl  downscale_rgba.glsl  downscale_rgba16f.glsl  rescale.glsl
shader/smooth/: smooth55_r.glsl  smooth55_rg.glsl  smooth55_rgba.glsl
shader/test/: test_interger_tex.glsl
shader/vertex/: display.glsl  fullscreen.glsl  points.glsl
shader/weight/: gravity_rg16f.glsl  radius.glsl  radius_r.glsl  radius_r16f.glsl  radius_rw.glsl
src/: affine.cpp  bayer.cpp  camera.cpp  display.cpp  egl.cpp  helpers.cpp  homography.cpp  jpeg.cpp  mapping.cpp  math.cpp  mmpilot_nav.cpp  navigation_test.cpp  opengl.cpp  render.cpp  serial.cpp  util.cpp
test/: CMakeLists.txt  calib.h  calibration.h  export_images.cpp  localization.h  mapping.h  pipeline.h  pipeline2.h  test_beta_msp.cpp  test_camera.cpp  test_control.h  test_controller.cpp  test_gpx_parse.cpp  test_msp_override.cpp  test_opengl_fbo.cpp  test_pose_graph.cpp
test/bench/: CMakeLists.txt  record_all.cpp  run_test.cpp  test_replay.cpp
test/vapor1/: CMakeLists.txt  pipeline.h  record_all.cpp  run_test.cpp  test_control.cpp  test_replay.cpp
